Fix the register button to the bottom of event landing pages on narrow screens

--- a/web/themes/custom/union_marketing/scss/components/_events.scss
+++ b/web/themes/custom/union_marketing/scss/components/_events.scss
@@ -109,6 +109,26 @@
     gap: var(--cu-ps1);
     align-items: center;
 
+    // Show on narrower widths
+     @media (max-width: 61rem) {
+      .registration-form-previously-visible & {
+        display: flex;
+        position: fixed;
+        background: white;
+        box-shadow: 0 2px 10px 2px rgba(0,0,0,.2);
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        flex-direction: column;
+        padding: var(--cu-vr-1) var(--gutter-width);
+        z-index: 100;
+
+        .field--location-link {
+          align-self: stretch;
+        }
+      }
+    }
+
     @include breakpoint(md) {
       display: flex;
     }
